criando pagina lutas.html e colocando meta tags

--- a/home.html
+++ b/home.html
@@ -2,15 +2,35 @@
 
 <head>
 
-<title>Model Studio</title>
+	<title>Studio Academy</title>
 
+	<meta name="description" content="Studio Academy: tatuagens e artes marciais."/>
+	<meta name="robots" content="index, follow"/>
+	<meta name="keywords" content="studio academy, tatuagens, artes marciais, tattoos, lutas, karate, muay thai."/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
-<h1>Model Studio</h1>
+	<div class="inicio">
+		<h1>Studio Academy</h1>
 
-<h2>Melhor lugar para fazer sua tatuagem e comprar suas roupas!</h2>
+		<h2>Melhor lugar para fazer sua tatuagem e treinar suas artes marciais!</h2>
+
+	</div>
+
+	
+	<div class="sobre">
+		<h3>Tatuagens</h3>
+		<a href="tattoo.html"><img src="img/tattoo.jpeg" alt="fazendo tatuagem no braço"><p>Ver mais</p></a>
+
+		<h3>Artes Marciais</h3>
+		
+		<a href="lutas.html"><img src="img/artes_marciais.png" alt="artes marciais: mulher de colete azul chutando no rosto a mulher de colete vermelho"><p>Ver mais</p></a>
+	</div>
 
 </body>
 
