mudanças no css

--- a/home.html
+++ b/home.html
@@ -18,18 +18,17 @@
 	<div class="inicio">
 		<h1>Studio Academy</h1>
 
-		<h2>Melhor lugar para fazer sua tatuagem e treinar suas artes marciais!</h2>
+		<h3>Melhor lugar para fazer sua tatuagem e treinar suas artes marciais!</h3>
 
 	</div>
 
 	
 	<div class="sobre">
-		<h3>Tatuagens</h3>
-		<a href="tattoo.html"><img src="img/tattoo.jpeg" alt="fazendo tatuagem no braço"><p>Ver mais</p></a>
-
-		<h3>Artes Marciais</h3>
-		
-		<a href="lutas.html"><img src="img/artes_marciais.png" alt="artes marciais: mulher de colete azul chutando no rosto a mulher de colete vermelho"><p>Ver mais</p></a>
+		<a href="tattoo.html"><h3>Tatuagens</h3></a>
+		<img src="img/tattoo.jpeg" alt="fazendo tatuagem no braço">
+	
+		<a href="lutas.html"><h3>Artes Marciais</h3></a>
+		<img src="img/artes_marciais.png" alt="artes marciais: mulher de colete azul chutando no rosto a mulher de colete vermelho">
 	</div>
 
 </body>
