--- a/tattoo.html
+++ b/tattoo.html
@@ -3,20 +3,26 @@
 <head>
 	<title>Tattoo</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/style_tattoo.css">
 
 </head>
 
 <body>
-	<center>
+	<div class="inicio">
 		<h1>Studio Academy</h1>
 
 		<p>Com estrutura de ponta e profissionais experientes, a Studio Academy é referência em profissionalismo, atendimento e um novo conceito de estúdio de tatuagem. Abaixo um pouco do nosso trabalho:</p>
-		<br>
+
+	</div>
+
+	<div class="tatuagem">
+
 		<img src="img/jobs.jpg" alt="Steve Jobs tattoo" height="400" width="400">
 		<p>Tatuagem produzida por: <b>Thomaz Gomes</b></p>
 		<img src="img/tatuagem.jpg" alt="Tattoo" height="400" width="400">
 		<p>Tatuagem produzida por: <b>Mariana Ferreira</b></p>
-	</center>
+	
+	</div>
 	
 </body>
 </html>
